--- a/style.css
+++ b/style.css
@@ -5,9 +5,11 @@
 .main-container{
     display: flex;
     height: 100vh;
-    width: 90vw;
+    width: 100vw;
     
     margin-right: 100px;
+    
+    
 }
 
 .image-container{
@@ -16,36 +18,130 @@
     height: 100%;
     position: relative;
     
+    
+    
 }
 
+.gradient{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to left,  rgb(0, 0, 0) 0%, rgba(233, 233, 233, 0) 70%);
+}
 .cheese-image{
     width: 40vw;
     height: 100%;
+    
+    
 }
 
 .form-container{
+    display: flex;
+    flex-direction: column;
     flex: auto;
     width: 100%;
     height: 100%;
+    padding: 0;
+    
+    
+    
     
 
 }
 
-.form-container form{
+.form{
+    display: flex;
+    height: 20vh;
     width: 60vw;
+    flex-direction: row;
+    border-width: 1px;
+    border-style: solid;
+    border-color: black;
+    padding-left: 2vw;
+    box-shadow: 2px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: black;
+    color: white;
+    
+    
+    
+    
+}
+
+
+.top-paragraph{
+    height: 30vh;
+   
+    
+    padding-left: 2vw;
+    padding-top: 2vw;
+    background-color: black;
+    color: white;
+}
+
+.top-paragraph p{
+    font-family: sans-serif;
+    font-size: 1.5rem;
+    width: 50vw;
+    margin-top: 8vh;
+    padding: 0;
+}
+
+.last-paragraph{
+    background-color: black;
+    height: 50vh;
+    color: white;
+    padding-left: 2vw;
+}
+
+.last-paragraph button{
+    width: 8vw;
+    height: 3vh;
+}
+
+.last-paragraph p{
+    margin-top: 3vh;
+}
+.columns{
+    display: flex;
+    
+    width: 60vw;
+    gap: 1.5vw;
+
+    
+}
+
+.col-1,.col-2{
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    width: 25vw;
     
     
 }
 
 .title-background{
     background-color: black;
-    opacity: 50%;
+    opacity: 60%;
+    
     width: 100%;
-    height: auto;
+    height: 12rem;
     position: absolute;
-    top: 25%;
+    top: 12vh;
     color: white;
     font-family: "Aboreto";
-    font-size: 7rem;
-    text-align: center;
+    font-size: 6rem;
+    
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+    
 }
+
+
+
+
+
+
