--- a/style.css
+++ b/style.css
@@ -1,13 +1,15 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: sans-serif;
+    color: bisque;
 }
 .main-container{
     display: flex;
     height: 100vh;
     width: 100vw;
     
-    margin-right: 100px;
+    
     
     
 }
@@ -28,6 +30,9 @@
     height: 100%;
     background: linear-gradient(to left,  rgb(0, 0, 0) 0%, rgba(233, 233, 233, 0) 70%);
 }
+
+
+
 .cheese-image{
     width: 40vw;
     height: 100%;
@@ -42,6 +47,7 @@
     width: 100%;
     height: 100%;
     padding: 0;
+    background-color: black;
     
     
     
@@ -60,8 +66,8 @@
     padding-left: 2vw;
     box-shadow: 2px;
     padding-top: 20px;
-    padding-bottom: 20px;
-    background-color: black;
+    background: linear-gradient(to right,  rgb(0, 0, 0) 0%, rgba(233, 233, 233, 0) 100%);
+    background-color: rgb(39, 37, 37);
     color: white;
     
     
@@ -81,7 +87,7 @@
 }
 
 .top-paragraph p{
-    font-family: sans-serif;
+    
     font-size: 1.5rem;
     width: 50vw;
     margin-top: 8vh;
@@ -96,8 +102,14 @@
 }
 
 .last-paragraph button{
-    width: 8vw;
-    height: 3vh;
+    width: 10vw;
+    height: 5vh;
+    background-color: black;
+    border-color: bisque;
+    
+    font-size: 1.5rem;
+    border-radius: 20px;
+    
 }
 
 .last-paragraph p{
@@ -115,7 +127,7 @@
 .col-1,.col-2{
     display: flex;
     flex-direction: column;
-    gap: 10px;
+    gap: 15px;
     width: 25vw;
     
     
@@ -130,7 +142,7 @@
     position: absolute;
     top: 12vh;
     color: white;
-    font-family: "Aboreto";
+    
     font-size: 6rem;
     
     display: flex;
@@ -138,6 +150,10 @@
     justify-content: center;
     
     
+}
+
+.title-background p{
+    font-family: "Aboreto";
 }
 
 
